--- a/hexgem_engine/Cargo.toml
+++ b/hexgem_engine/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-egui = "0.26.2"
+cli-clipboard = "0.4"
+egui = "0.26"
 egui_gl_glfw = "0.1.1"
-gl = "0.14.0"
-glfw = "0.55.0"
+gl = "0.14"
+glfw = "0.55"
 log = "0.4.20"
 
 
