Own enums types - translation

--- a/hexgem_engine/Cargo.toml
+++ b/hexgem_engine/Cargo.toml
@@ -9,8 +9,10 @@ edition = "2021"
 cli-clipboard = "0.4"
 egui = "0.26"
 egui_gl_glfw = "0.1.1"
+egui_sdl2_gl = "0.23.0"
 gl = "0.14"
 glfw = "0.55"
 log = "0.4.20"
+sdl2 = "0.35"
 
 
